basic UCI Signed-off-by: khushitshah <khushitshah1@gmail.com>
Signed-off-by: khushitshah <khushitshah1@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "-O3")
 
 include_directories(${CMAKE_SOURCE_DIR}/libs/libchess)
-add_executable(SuperChessEngine src/main.cpp src/constants.h src/StaticEvaluator.cpp src/StaticEvaluator.h src/utils.cpp src/utils.h src/Engine.cpp src/Engine.h src/TT.cpp src/TT.h src/SearchInfo.h src/SearchThread.h)
+add_executable(SuperChessEngine src/main.cpp src/constants.h src/StaticEvaluator.cpp src/StaticEvaluator.h src/utils.cpp src/utils.h src/Engine.cpp src/Engine.h src/TT.cpp src/TT.h src/SearchInfo.h src/SearchThread.h src/uci.cpp src/uci.h)
 
 target_link_libraries(SuperChessEngine ${CMAKE_SOURCE_DIR}/libs/libchess/libchess.a)
 target_include_directories(SuperChessEngine PUBLIC ${CMAKE_SOURCE_DIR}/libs/libchess)
