--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 3.21)
+cmake_minimum_required(VERSION 3.12)
 project(sce)
 
-find_library(TENSORFLOW_LIB tensorflow HINT /usr/local/lib)
+ find_library(TENSORFLOW_LIB tensorflow HINT /usr/local/lib)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -march=native -DNDEBUG")
@@ -13,21 +13,13 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -march=native -DNDEB
 include_directories(${CMAKE_SOURCE_DIR}/libs/libchess/src/libchess)
 
 
-OPTION(OLD_VALS "Option description" OFF) # Enabled by default
-IF(OLD_VALS)
-    ADD_DEFINITIONS(-D OLD_VALS=1)
-ENDIF(OLD_VALS)
-
-OPTION(NEW_VALS "Option description" ON) # Enabled by default
-IF(NEW_VALS)
-    ADD_DEFINITIONS(-D NEW_VALS=1)
-ENDIF(NEW_VALS)
+#ADD_DEFINITIONS(-D USE_NN=1)
 
 
 
-add_executable(SuperChessEngine src/main.cpp src/constants.h src/StaticEvaluator.cpp src/StaticEvaluator.h src/utils.cpp src/utils.h src/Engine.cpp src/Engine.h src/TT.h src/SearchInfo.h src/SearchThread.h src/uci.cpp src/uci.h)
+add_executable(SuperChessEngine src/main.cpp src/constants.h src/StaticEvaluator.cpp src/StaticEvaluator.h src/utils.cpp src/utils.h src/Engine.cpp src/Engine.h src/TT.h src/SearchInfo.h src/SearchThread.h src/uci.cpp src/uci.h src/SETT.h src/StaticEvaluatorNN.h src/StaticEvaluatorNN.cpp)
 
-#target_link_libraries(SuperChessEngine "-static -static-libgcc -pthread")
+target_link_libraries(SuperChessEngine "-lpthread")
 target_link_libraries(SuperChessEngine "${TENSORFLOW_LIB}")
 target_link_libraries(SuperChessEngine ${CMAKE_SOURCE_DIR}/libs/libchess/build/static/libchess.a)
 target_include_directories(SuperChessEngine PUBLIC ${CMAKE_SOURCE_DIR}/libs/libchess/src/libchess)
