--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,8 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -march=native -DNDEBUG")
 
 
-ADD_DEFINITIONS(-D USE_NN=1)
-#ADD_DEFINITIONS(-D USE_MSNN=1)
+# ADD_DEFINITIONS(-D USE_NN=1)
+# ADD_DEFINITIONS(-D USE_MSNN=1)
 
 add_executable(SuperChessEngine src/main.cpp src/constants.h src/StaticEvaluator.cpp src/StaticEvaluator.h src/utils.cpp src/utils.h src/Engine.cpp src/Engine.h src/TT.h src/SearchInfo.h src/SearchThread.h src/uci.cpp src/uci.h src/SETT.h src/StaticEvaluatorNN.h src/StaticEvaluatorNN.cpp src/MoveSorterNN.cpp src/MoveSorterNN.h src/MSTT.h src/json.h)
 
